[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.0.2",
    "langchain-core>=1.0.3",
    "langgraph>=1.0.2",
    "openai",
    "langchain[openai]>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "bs4>=0.0.2",
    "httpx[socks]>=0.28.1",
    "ipython>=9.6.0",
    "dotenv>=0.9.9",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
